Next release
============

- Register a ``repoze.bfg.resource.OverrideProvider`` as a
  pkg_resources provider only for modules which are known to have
  overrides, instead of globally, when a <resource> directive is used
  (performance).

1.0a6 (2009-06-29)
==================

Bug Fixes
---------

- Use ``caller_package`` function instead of ``caller_module``
  function within ``templating`` to avoid needing to name the caller
  module in resource overrides (actually match docs).

- Make it possible to override templates stored directly in a module
  with templates in a subdirectory of the same module, stored directly
  within another module, or stored in a subdirectory of another module
  (actually match docs).

1.0a5 (2009-06-28)
==================

Features
--------

- A new ZCML directive exists named "resource".  This ZCML directive
  allows you to override Chameleon templates within a package (both
  directories full of templates and individual template files) with
  other templates in the same package or within another package.  This
  allows you to "fake out" a view's use of a template, causing it to
  retrieve a different template than the one actually named by a
  relative path to a call like
  ``render_template_to_response('templates/mytemplate.pt')``.  For
  example, you can override a template file by doing::

    <resource
      to_override="some.package:templates/mytemplate.pt"
      override_with="another.package:othertemplates/anothertemplate.pt"
     />

  The string passed to "to_override" and "override_with" is named a
  "specification".  The colon separator in a specification separates
  the package name from a package-relative directory name.  The colon
  and the following relative path are optional.  If they are not
  specified, the override attempts to resolve every lookup into a
  package from the directory of another package.  For example::

    <resource
      to_override="some.package"
      override_with="another.package"
     />

