@@ -28,10 +28,10 @@
 	application generated by the <a
 	href="http://bfg.repoze.org">repoze.bfg</a> web
 	application framework.</h1>
-        <p>The item from the database is:</p>
-        <b>id:</b> ${item.id}<br/>
-        <b>name:</b> ${item.name}<br/>
-        <b>value:</b> ${item.value}<br/>
+        <p>
+         <b>Id:</b> ${item.id}<br />
+         <b>Name:</b> ${item.name}<br />
+         <b>Value:</b> ${item.value}</p>
       </div>
     </div>
     <!-- end content -->
