@@ -1,0 +1,101 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:tal="http://xml.zope.org/namespaces/tal">
+<head>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<title>${project} Application</title>
+<meta name="keywords" content="python web application" />
+<meta name="description" content="repoze.bfg web application" />
+<link href="${request.application_url}/static/default.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+<!-- start header -->
+<div id="logo">
+  <h2><code>${project}</code>, a <code>repoze.bfg</code> application</h2>
+</div>
+<div id="header">
+  <div id="menu">
+  </div>
+</div>
+<!-- end header -->
+<div id="wrapper">
+  <!-- start page -->
+  <div id="page">
+    <!-- start content -->
+    <div id="content">
+      <div class="post">
+	<h1 class="title">Welcome to <code>${project}</code>, an
+	application generated by the <a
+	href="http://bfg.repoze.org">repoze.bfg</a> web
+	application framework.</h1>
+        <p tal:repeat="item items">
+         <a href="${item.id}">${item.name}</a></p>
+      </div>
+    </div>
+    <!-- end content -->
+    <!-- start sidebar -->
+    <div id="sidebar">
+      <ul>
+	<li id="search">
+	  <h2>Search<br/> <code>repoze.bfg</code> Documentation</h2>
+	  <form method="get" 
+                action="http://bfg.repoze.org/searchresults">
+	    <fieldset>
+	      <input type="text" id="q" name="text" value="" />
+	      <input type="submit" id="x" value="Search" />
+	    </fieldset>
+	  </form>
+	</li>
+	<li>
+	  <h2><code>repoze.bfg</code> links</h2>
+	  <ul>
+	    <li><a
+	    href="http://docs.repoze.org/bfg/#narrative-documentation">Narrative
+	    Documentation</a>
+            </li>
+	    <li>
+              <a
+              href="http://docs.repoze.org/bfg/#api-documentation">API
+              Documentation</a>
+            </li>
+	    <li>
+              <a
+              href="http://docs.repoze.org/bfg/#tutorials">Tutorials</a>
+            </li>
+	    <li>
+              <a
+              href="http://docs.repoze.org/bfg/#change-history">Change
+              History</a>
+            </li>
+	    <li>
+              <a
+              href="http://docs.repoze.org/bfg/#sample-applications">Sample
+              Applications</a>
+            </li>
+	    <li>
+              <a
+              href="http://docs.repoze.org/bfg/#support-and-development">Support
+              and Development</a>
+            </li>
+	    <li>
+              <a
+              href="irc://irc.freenode.net#repoze">IRC Channel</a>
+            </li>
+	  </ul>
+	</li>
+      </ul>
+    </div>
+    <!-- end sidebar -->
+    <div style="clear: both;">&nbsp;</div>
+  </div>
+</div>
+<!-- end page -->
+<!-- start footer -->
+<div id="footer">
+  <p id="legal">( c ) 2008. All Rights Reserved. Template design
+  by <a href="http://www.freecsstemplates.org/">Free CSS
+  Templates</a>.</p>
+</div>
+<!-- end footer -->
+</body>
+</html>
